--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,3 +1,11 @@
 <!--pages/home/home.wxml-->
-<text>pages/home/home.wxml</text>
-<div class='title'>bandari的首页</div>
+
+<!-- 1.小程序的数据绑定 Mustache语法-->
+<view>Hellow {{name}}</view>
+<view>年龄 :{{age}}</view>
+<!-- 2.列表展示 -->
+<view wx:for='{{students}}' wx:key='item'>{{item.name}}--{{item.age}}</view>
+<!-- 3.事件监听改变data 计数器的实现-->
+<view>当前计数：{{counter}}</view>
+<button size='mini'bindtap='handleBtnClick'>+</button>
+<button size='mini'bindtap='handleSubClick'>-</button>
